Fix: content was not centered in desktop view

--- a/index.scss
+++ b/index.scss
@@ -189,6 +189,10 @@ body {
 }
 
 @media (min-width: 40rem) {
+    body {
+        align-items: center;
+    }
+
     .splitter {
         &__content {
             display: grid;
